mengubah nama page portfolio_5 menjadi portfolio.html saja

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="menu-item"><a href="slider_carousel.html">Slider Carousel</a></li>
               </ul>
             </li> -->
-            <li class="menu-item menu-item-has-children"> <a href="portfolio_5.html">Portfolio</a>
+            <li class="menu-item menu-item-has-children"> <a href="portfolio.html">Portfolio</a>
               <!-- <ul class="sub-menu">
                 <li class="menu-item"> <a href="portfolio_1.html">Portfolio style 1</a></li>
                 <li class="menu-item"><a href="portfolio_2.html">Portfolio style 2</a></li>
