--- a/portfolio.html
+++ b/portfolio.html
@@ -19,30 +19,20 @@
     <header class="main-header js-main-header auto-hide-header">
       <div class="main-header__layout">
         <div class="main-header__logo">
-          
           <div class="logo-dark"><a href="index.html"><img src="assets/img/logo_d.svg" alt="Jack Ryan - Creative Portfolio HTML Template"></a></div>
         </div>
         <button class="btn btn--subtle main-header__nav-trigger js-main-header__nav-trigger" aria-label="Toggle menu" aria-expanded="false" aria-controls="main-header-nav"><i class="main-header__nav-trigger-icon" aria-hidden="true"></i><span>menu</span></button>
         <nav class="main-header__nav js-main-header__nav" id="main-header-nav" aria-labelledby="primary-menu">
           <ul class="dropdown__wrapper dropdown__trigger" id="primary-menu">
             <li class="menu-item menu-item-has-children"> <a href="index.html">Home</a></li>
-            <li class="menu-item menu-item-has-children"> <a href="portfolio.html">Portfolio</a></li>
+            <!-- <li class="menu-item menu-item-has-children"> <a href="portfolio.html">Portfolio</a></li> -->
             <li class="menu-item menu-item-has-children"> <a href="blog_sidebar.html">Blog</a></li>
-            <!-- <li class="menu-item menu-item-has-children"> <a>Pages</a>
-              <ul class="sub-menu">
-                <li class="menu-item"><a href="single_portfolio.html">Single Portfolio</a></li>
-                <li class="menu-item"><a href="single_post.html">Single Post</a></li>
-                <li class="menu-item"><a href="404.html">Page 404</a></li>
-              </ul>
-            </li> -->
             <li class="menu-item"> <a href="about.html">About</a></li>
             <li class="menu-item"> <a href="contacts.html">Contacts</a></li>
           </ul>
         </nav>
       </div>
     </header>
-
-    
     <!--Hero-->
     <div class="margin-top-xl"></div>
     <section class="hero hero--overlay-layer hero-default">
